--- a/index.html
+++ b/index.html
@@ -28,30 +28,192 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+        <p><a href="https://circleci.com/gh/mkindalov/struckture"><img src="https://circleci.com/gh/mkindalov/struckture.svg?style=svg" alt="Circle CI"></a>
+<a href="https://travis-ci.org/mkindalov/struckture"><img src="https://travis-ci.org/mkindalov/struckture.svg?branch=master" alt="Build Status"></a></p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="target" class="anchor" href="#target" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Target</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>This java framework is for those who want to read binary structures in java. Useful for reverse engineering of file formats.</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="licence" class="anchor" href="#licence" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Licence</h3>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p><a href="http://www.apache.org/licenses/LICENSE-2.0">Apache Licence version 2</a></p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Documentation</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<h4>
+<a id="usage" class="anchor" href="#usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Usage</h4>
+
+<p>You need an annotated class representing the structure to read:</p>
+
+<div class="highlight highlight-source-java"><pre>    @Struckture(length <span class="pl-k">=</span> <span class="pl-c1">10</span>) 
+    <span class="pl-k">public</span> <span class="pl-k">class</span> <span class="pl-en">Structure</span> {
+        <span class="pl-k">@StruckField</span>(<span class="pl-c1">offset</span> <span class="pl-k">=</span> <span class="pl-c1">0</span>)
+        <span class="pl-k">int</span> field1;
+    }</pre></div>
+
+<p>The reading from file goes like this: </p>
+
+<div class="highlight highlight-source-java"><pre>    <span class="pl-smi">InputStream</span> stream <span class="pl-k">=</span> <span class="pl-k">new</span> <span class="pl-smi">FileInputStream</span>(<span class="pl-s"><span class="pl-pds">"</span>filename<span class="pl-pds">"</span></span>);
+    <span class="pl-k">Struck&lt;<span class="pl-smi">Structure</span>&gt;</span> struck <span class="pl-k">=</span> <span class="pl-smi">Strucktor</span><span class="pl-k">.</span>forClass(<span class="pl-smi">Structure</span><span class="pl-k">.</span>class);
+    <span class="pl-smi">Structure</span> structure;
+    <span class="pl-k">while</span>((structure <span class="pl-k">=</span> struck<span class="pl-k">.</span>read(stream)) <span class="pl-k">!=</span> <span class="pl-c1">null</span>) {
+        <span class="pl-c">//do something</span>
+    }</pre></div>
+
+<h4>
+<a id="struckturelength--0x10" class="anchor" href="#struckturelength--0x10" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><code>@Struckture(length = 0x10)</code>
+</h4>
+
+<p>The structure to read must be annotated with <code>@Struckture</code> annotation with the <code>length</code> in bytes specified. The framework then tries to read chunks of <code>length</code> bytes and resolve them into a structure.</p>
+
+<h4>
+<a id="struckfield" class="anchor" href="#struckfield" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><code>@StruckField</code>
+</h4>
+
+<p>Struckture framework process a field only if it is annotated with <code>@StruckField</code>.</p>
+
+<div class="highlight highlight-source-java"><pre>    @Struckture(length <span class="pl-k">=</span> 0x10)
+    <span class="pl-k">private</span> <span class="pl-k">static</span> <span class="pl-k">class</span> <span class="pl-en">Structure</span> {
+        <span class="pl-k">@StruckField</span>(<span class="pl-c1">offset</span> <span class="pl-k">=</span> 0x3)
+        <span class="pl-k">private</span> <span class="pl-k">int</span> processed;
+
+        <span class="pl-k">private</span> <span class="pl-k">int</span> notProcessed; <span class="pl-c">//always 0</span>
+    }</pre></div>
+
+<p><code>offset</code> is the only common attribute for all field mappings. It sets the position(in bytes) of the read chunk from which to read the field. <code>(offset = 0)</code> means read from the start.</p>
+
+<p><code>size</code> attribute is optional and ignored if not needed. It is useful for reading bytes, bit arrays and strings.
+For example:</p>
+
+<div class="highlight highlight-source-java"><pre>        @StruckField(offset <span class="pl-k">=</span> 0x3)
+        <span class="pl-k">private</span> <span class="pl-k">int</span> defaultSizeFour;
+    }</pre></div>
+
+<p>When reading int, starting the offset the next 4 bytes are used in defining the field value. This is because the int size is 4.
+The list goes like this:</p>
+
+<table>
+<thead>
+<tr>
+<th>Type</th>
+<th>Size(bytes)</th>
+<th>Type</th>
+<th>Size(bytes)</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><code>boolean</code></td>
+<td>1</td>
+<td><code>Boolean</code></td>
+<td>1</td>
+</tr>
+<tr>
+<td><code>byte</code></td>
+<td>1</td>
+<td><code>Byte</code></td>
+<td>1</td>
+</tr>
+<tr>
+<td><code>short</code></td>
+<td>2</td>
+<td><code>Short</code></td>
+<td>2</td>
+</tr>
+<tr>
+<td><code>int</code></td>
+<td>4</td>
+<td><code>Integer</code></td>
+<td>4</td>
+</tr>
+<tr>
+<td><code>long</code></td>
+<td>8</td>
+<td><code>Long</code></td>
+<td>8</td>
+</tr>
+<tr>
+<td><code>float</code></td>
+<td>4</td>
+<td><code>Float</code></td>
+<td>4</td>
+</tr>
+<tr>
+<td><code>double</code></td>
+<td>8</td>
+<td><code>Double</code></td>
+<td>8</td>
+</tr>
+<tr>
+<td><code>byte[]</code></td>
+<td>
+<code>size</code> attribute</td>
+<td><code>boolean[]</code></td>
+<td>
+<code>size</code> attribute</td>
+</tr>
+<tr>
+<td><code>String</code></td>
+<td>Check the <a href="#reading-strings">strings section</a>
+</td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
+
+<h4>
+<a id="reverse" class="anchor" href="#reverse" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><code>@Reverse</code>
+</h4>
+
+<p>If <code>@Reverse</code> annotation is used then instead of <strong>BigEndian</strong> the value will be resolved as <strong>LittleEndian</strong></p>
+
+<div class="highlight highlight-source-java"><pre>        @StruckField(offset <span class="pl-k">=</span> 0x8) @<span class="pl-smi">Reverse</span>
+        <span class="pl-k">private</span> <span class="pl-k">int</span> reverse;</pre></div>
+
+<p>This Annotation will influence on all primitives and wrappers with size &gt; 1 and byte[].</p>
+
+<h4>
+<a id="bitposition" class="anchor" href="#bitposition" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><code>@BitPosition</code>
+</h4>
+
+<p>When reading <code>boolean</code> the value is resolved in the following way: <code>value = byte[offset] &gt; 0</code>
+If we want to get the value of a bit in that byte then we use <code>@BitPosition</code> annotation. </p>
+
+<div class="highlight highlight-source-java"><pre>        @StruckField(offset <span class="pl-k">=</span> 0xa)
+        <span class="pl-k">private</span> <span class="pl-k">boolean</span> trueIfByteGreaterThan0;
+        @StruckField(offset <span class="pl-k">=</span> 0xf) @BitPosition(<span class="pl-c1">3</span>)
+        <span class="pl-k">private</span> <span class="pl-k">boolean</span> trueIfBit3IsSet;</pre></div>
+
+<h4>
+<a id="reading-strings" class="anchor" href="#reading-strings" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Reading Strings</h4>
+
+<p>When reading strings <code>size</code> means <code>maxSize</code>. When reading <code>String</code> with size 5, the result will have length between 0 and 5.
+Encoding can be changed using <code>@StringEncoding()</code> annotation. Default encoding is <strong>"ASCII"</strong></p>
+
+<div class="highlight highlight-source-java"><pre>        @StruckField(offset <span class="pl-k">=</span> 0x2, size <span class="pl-k">=</span> <span class="pl-c1">5</span>)
+        <span class="pl-k">private</span> <span class="pl-smi">String</span> string;
+
+        @StruckField(offset <span class="pl-k">=</span> <span class="pl-c1">0</span>, size <span class="pl-k">=</span> 0x11) @StringEncoding(<span class="pl-s"><span class="pl-pds">"</span>utf-8<span class="pl-pds">"</span></span>)
+        <span class="pl-k">private</span> <span class="pl-smi">String</span> utf8string;</pre></div>
+
+<h4>
+<a id="allowoverlapping" class="anchor" href="#allowoverlapping" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><code>AllowOverlapping</code>
+</h4>
+
+<p>When <code>@Struckture(allowOverlapping = true)</code> is used, the check if multiple fields depend on the same bytes is disabled, so same bytes can be used in different fields. In the next example bytes 4, 5, 6, 7 are used for the integer and byte[]</p>
+
+<div class="highlight highlight-source-java"><pre>    @Struckture(length <span class="pl-k">=</span> 0x8, allowOverlapping <span class="pl-k">=</span> <span class="pl-c1">true</span>)
+    <span class="pl-k">private</span> <span class="pl-k">static</span> <span class="pl-k">class</span> <span class="pl-en">OverlappingAllowedStructure</span> {
+        <span class="pl-k">@StruckField</span>(<span class="pl-c1">offset</span> <span class="pl-k">=</span> <span class="pl-c1">4</span>)
+        <span class="pl-k">private</span> <span class="pl-k">int</span> integer;
+        <span class="pl-k">@StruckField</span>(<span class="pl-c1">offset</span> <span class="pl-k">=</span> <span class="pl-c1">4</span>, <span class="pl-c1">size</span> <span class="pl-k">=</span> <span class="pl-c1">4</span>)
+        <span class="pl-k">private</span> <span class="pl-k">byte</span>[] bytes;
+    }</pre></div>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/mkindalov">mkindalov</a></p>
